Bug 129188 - EMF+ SetTextContrast not implemented
Summary: EMF+ SetTextContrast not implemented
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Chris Sherlock
URL:
Whiteboard: target:6.5.0
Keywords: filter:emf
Depends on:
Blocks: emf-testbed 129138
  Show dependency treegraph
 
Reported: 2019-12-04 18:29 UTC by Chris Sherlock
Modified: 2019-12-19 20:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Gamma of 2500 (outside of bounds) (196.89 KB, image/emf)
2019-12-18 21:08 UTC, Chris Sherlock
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Sherlock 2019-12-04 18:29:03 UTC
Description:
We are not setting text contrast when this is set via an EmfPlusSetTextContrast record.

Steps to Reproduce:
Open an EMF+ image that sets text contrast to a particular gamma. 

Actual Results:
Contrast is not set. 

Expected Results:
Contrast should be corrected within a gamma range of 1.0 to 2.2.


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Julien Nabet 2019-12-04 19:41:33 UTC
Since you assigned yourself, let's put this one to ASSIGNED :-)
Comment 2 Bartosz 2019-12-10 19:34:08 UTC
Please attach EMF+ image which uses EmfPlusSetTextContrast record.
It could be used for verify if the implementation is working correctly.
Comment 3 Chris Sherlock 2019-12-18 21:08:28 UTC
Created attachment 156657 [details]
Gamma of 2500 (outside of bounds)
Comment 4 Chris Sherlock 2019-12-18 21:09:18 UTC
I have attached a test image. Note that the gamma is out of bounds - it is 2.5 but the range is 1.0 to 2.2. I clamp the value.
Comment 5 Commit Notification 2019-12-19 16:52:54 UTC
Chris Sherlock committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac793c7d9d3dda330aa25345f092b188e2a79a6d

tdf#129188 drawinglayer: implement EMF+ SetTextContrast

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.