tdf#129188 drawinglayer: implement EMF+ SetTextContrast

Change-Id: I5e249d5ba85df020ab90c6e543c0d8aefe0b572f